Update moment version

--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "make-minify": "browserify src/chrono.js -d --s chrono -d -p [minifyify --output chrono.map.json] -o chrono.min.js",
     "make": "npm run make-bundle & npm run make-minify",
     "watch": "jest --watch",
-    "test": "jest --coverage && npm audit --audit-level high",
+    "test": "jest --coverage",
     "coveralls": "npm run test && cat coverage/lcov.info | coveralls"
   },
   "dependencies": {
-    "moment": "2.21.0"
+    "moment": "^2.24.0"
   }
 }
